[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AppButtonValue" type="Label" parent="."]
margin_left = 144.0
margin_top = 86.0
margin_right = 184.0
margin_bottom = 100.0

[node name="VolUpLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 36.0
margin_right = 119.0
margin_bottom = 50.0
text = "Volume Up: "

[node name="VolDownLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 62.0
margin_right = 137.0
margin_bottom = 76.0
text = "Volume Down: "

[node name="AppButtonLabel" type="Label" parent="."]
margin_left = 41.0
margin_top = 86.0
margin_right = 138.0
margin_bottom = 100.0
text = "App Button: "

[node name="DaydreamButtonLabel" type="Label" parent="."]
margin_left = 41.0
margin_top = 111.0
margin_right = 161.0
margin_bottom = 125.0
text = "Daydream Button: "

[node name="TouchButtonLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 138.0
margin_right = 164.0
margin_bottom = 152.0
text = "Touch Button: "

[node name="GyroLabel" type="Label" parent="."]
margin_left = 42.0
margin_top = 172.0
margin_right = 162.0
margin_bottom = 186.0
text = "Gyro: "

[node name="AccelLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 202.0
margin_right = 160.0
margin_bottom = 216.0
text = "Accel:"

[node name="MagLabel" type="Label" parent="."]
margin_left = 41.0
margin_top = 227.0
margin_right = 161.0
margin_bottom = 241.0
text = "Mag: "

[node name="GyroXValue" type="Label" parent="."]
margin_left = 123.0
margin_top = 172.0
margin_right = 243.0
margin_bottom = 186.0
text = "x()"

[node name="AccelXValue" type="Label" parent="."]
margin_left = 124.0
margin_top = 202.0
margin_right = 244.0
margin_bottom = 216.0
text = "x()"

[node name="TouchXValue" type="Label" parent="."]
margin_left = 225.0
margin_top = 137.0
margin_right = 345.0
margin_bottom = 151.0
text = "x()"

[node name="MagXValue" type="Label" parent="."]
margin_left = 124.0
margin_top = 228.0
margin_right = 244.0
margin_bottom = 242.0
text = "x()"

[node name="GyroYValue" type="Label" parent="."]
margin_left = 190.0
margin_top = 172.0
margin_right = 310.0
margin_bottom = 186.0
text = "y()"

[node name="TouchYValue" type="Label" parent="."]
margin_left = 286.0
margin_top = 137.0
margin_right = 406.0
margin_bottom = 151.0
text = "y()"

[node name="AccelYValue" type="Label" parent="."]
margin_left = 190.0
margin_top = 201.0
margin_right = 310.0
margin_bottom = 215.0
text = "y()"

[node name="MagYValue" type="Label" parent="."]
margin_left = 188.0
margin_top = 229.0
margin_right = 308.0
margin_bottom = 243.0
text = "y()"

[node name="GyroZValue" type="Label" parent="."]
margin_left = 251.0
margin_top = 173.0
margin_right = 371.0
margin_bottom = 187.0
text = "z()"

[node name="AccelZValue" type="Label" parent="."]
margin_left = 251.0
margin_top = 202.0
margin_right = 371.0
margin_bottom = 216.0
text = "z()"

[node name="MagZValue" type="Label" parent="."]
margin_left = 251.0
margin_top = 227.0
margin_right = 371.0
margin_bottom = 241.0
text = "z()"

[node name="VolUpValue" type="Label" parent="."]
margin_left = 145.0
margin_top = 37.0
margin_right = 185.0
margin_bottom = 51.0

[node name="VolDownValue" type="Label" parent="."]
margin_left = 145.0
margin_top = 63.0
margin_right = 185.0
margin_bottom = 77.0

[node name="DaydreamButtonValue" type="Label" parent="."]
margin_left = 166.0
margin_top = 112.0
margin_right = 206.0
margin_bottom = 126.0

[node name="TouchButtonValue" type="Label" parent="."]
margin_left = 151.0
margin_top = 139.0
margin_right = 191.0
margin_bottom = 153.0
